# hig

./: README.md  pyproject.toml
output/lora_debug/: adapter_config.json  adapter_model.safetensors
scripts/: export_dataset.py  prepare_data.py  run_inference.py  train.py
src/hig/: __init__.py  trainer.py
src/hig/data/: dataset.py  preprocessor.py
src/hig/inference/: generator.py  interface.py
src/hig/model/: adapter.py  loader.py
src/hig/utils/: translator.py
tests/: test_tiny_mode.py  test_tiny_training.py  test_vae_shape.py
