[project]
name = "hig"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "TuThanh", email = "tuthanh10825@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.4.2",
    "huggingface-hub>=1.2.3",
    "llama-cpp-python>=0.3.16",
    "pillow>=12.0.0",
    "tqdm>=4.67.1",
]

[project.scripts]
hig = "hig:main"

[build-system]
requires = ["uv_build>=0.9.16,<0.10.0"]
build-backend = "uv_build"
