[project]
name = "hig"
version = "0.1.0"
description = "Vietnamese Historical Image Generation with Flux.1"
readme = "README.md"
authors = [
    { name = "TuThanh", email = "tuthanh10825@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.12.0",
    "bitsandbytes>=0.49.0",
    "datasets>=4.4.2",
    "diffusers>=0.36.0",
    "gradio>=6.2.0",
    "huggingface-hub>=0.36.0",
    "llama-cpp-python>=0.3.16",
    "peft>=0.18.0",
    "pillow>=12.1.0",
    "sentencepiece>=0.2.1",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.3",
]

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[project.scripts]
hig = "hig:main"

[build-system]
requires = ["uv_build>=0.9.16,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
